added bullet points

--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
         <div id='methods' class='category section-4'>
             <div class='container container-4'>
                 <h3>Methods</h3>
-                <p>Data source: Twitter, Wiki, Google Trends</p>
-                <p>baseline: avg BTS number for each platform within a day.</p>
-                <p>Degree of participation for each method</p>
-                <p>EDA for each data source</p>
+                <p>Data sources: Twitter, Wiki, Google Trends. In this section we will discuss the degree of participation for each data source and perform EDA on them. </p>
+                <p>Google trends: anyone can search. low engagement.</p>
+                <p>Wikipedia pageviews: those who are curious and want more information beyond the initial google search page will look at the wikipedia pages.</p>
+                <p>Wikipedia edits: users need to be updated with related Wikipedia pages to edit the page's content.</p>
+                <p>Twitter: likes, comments, and posting makes information spread easily and enables large-scaled collaborative efforts.</p>
             </div>
         </div>
 
@@ -79,8 +80,10 @@
         <div id='kpop-numbers' class='category section-5'>
             <div class='container container-5'>
                 <h3>K-pop by the numbers</h3>
-                <p>twitter BTS followers: 32.8M</p>
-                <p>Album plots</p>
+                <p>Twitter BTS followers: 32.8M</p>
+                <p>Unique wikipedia editors on BTS page: ##</p>
+                <p>Number of searches for BTS: ##</p>
+                <p>Compare album releases between popular artists: Justin Bieber, Taylor Swift, and BTS</p>
             </div>
         </div>
 
@@ -88,17 +91,17 @@
         <div id='hashtagtakeovers' class='category section-6'>
             <div class='container container-6'>
                 <h3>Hashtag Takeovers</h3>
-                <p>#WhiteLivesMatter</p>
-                <p>#ImpeachBidenNow</p>
-                <p>AOCLied</p>
+                <p>Introduce #WhiteLivesMatter, #ImpeachBidenNow, #AOCLied, and other political hashtags</p>
+                <p>Go deeper into the #WhiteLivesMatter takeover</p>
             </div>
         </div>
 
-        <!-- concluscion -->
+        <!-- conclusion -->
         <div id='conclusions' class='category section-7'>
             <div class='container container-7'>
                 <h3>Conclusions</h3>
-                <p></p>
+                <p>BTS fanbase is growing rapidly</p>
+                <p>twitter allows for more fan-related collaborative projects</p>
             </div>
         </div>
 
