hashtag section done

--- a/index.html
+++ b/index.html
@@ -15,84 +15,69 @@
         <!-- title -->
         <div class='section'>
             <div class='container container-1'>
-                <h2>The <strong>Online Presence</strong> of the</strong></h2>
-                <h1>K-pop Fandom</h1>
+                <h2>The Large-Scale Collaborative Presence of</h2>
+                <h1>Online Fandoms</h1>
             </div>
         </div>
 
-        <!-- kpop & hypothesis -->
+        <!-- hypothesis -->
         <div class='section-2'>
             <div class='container container-2'>
-                <div class='row'>
-                    <div class = 'col col-6'>
-                            <h4>K-pop</h4>
-                            <div class='text-block'>[Short for Korean Pop]</div>
-                            <p class='dark'>Entertainment & music, originating from South Korea. Includes artists and groups that produce music and choreographies.</p>
-                        </div>
-
-                        <div class = 'col col-6'>
-                            <h4>Fandom</h4>
-                            <div class='text-block'>[Aka fan culture]</div>
-                            <p class='dark'>The K-pop fan culture includes communities of K-pop fans who are increasingly popular online and have rallied behind their favorite artists for different causes.</p>
-                        </div>
-                </div>
-            </div>
-
-            <div class='container'>
                 <div class='text-block'>[our hypothesis]</div>
-                <h2 class='hypo'>K-pop fans' participation in <span>large-scalled collaborative efforts</span> is <span>unparalleled</span> among music industry fans, masterfully utilizing social media platforms to organize these projects.</h2>
+                <h2 class='hypo'>K-pop fans’ participation in online collaborative efforts largely 
+                    outscales other music industry fan participation, masterfully utilizing social 
+                    media platforms– where information can be easily shared– to organize these projects. </h2>
             </div>
         </div>
 
         <!-- navigation -->
         <nav class='navbar nav-default' id='navbar'>
             <div class='container'>
-                <a href='#more-about-kpop' class='nav-link' id='nav1'>More about K-pop</a>
-                <a href='#methods' class='nav-link' id='nav2'>Methods</a>
-                <a href='#kpop-numbers' class='nav-link' id='nav3'>K-pop by the numbers</a>
-                <a href='#hashtagtakeovers' class='nav-link' id='nav4'>#HashtagTakeovers</a>
+                <a href='#hashtagtakeovers' class='nav-link' id='nav1'>#HashtagTakeovers</a>
+                <a href='#data' class='nav-link' id='nav2'>Our Data</a>
+                <a href='#methods-analysis' class='nav-link' id='nav3'>Methods & Analysis</a>
+                <a href='#results' class='nav-link' id='nav4'>Results</a>
                 <a href='#conclusions' class='nav-link' id='nav5'>Conclusions</a>
             </div>
         </nav>
 
-        <!-- More abut kpop -->
-        <div id='more-about-kpop' class='category section-3'>
-            <div class='container container-3'>
-                <h3>More about K-pop</h3>
-                <p>It is estimated that the K-pop stan community has roughly 100 million people, with BTS ARMY, fans of BTS, the most popular K-pop group, making up 50 million alone.</p>
-                <p>The influence of BTS ARMY and K-pop fans is so large-scale, that security engineer Boris Cipot has stated that “I can see them (BTS ARMY) being a cyberthreat. On the one hand, they could be used for marketing purposes, or even used politically" </p>
-            </div>
-        </div>
-
-        <!-- Methods -->
-        <div id='methods' class='category section-4'>
-            <div class='container container-4'>
-                <h3>Methods</h3>
-                <p>Data sources: Twitter, Wiki, Google Trends. In this section we will discuss the degree of participation for each data source and perform EDA on them. </p>
-                <p>Google trends: anyone can search. low engagement.</p>
-                <p>Wikipedia pageviews: those who are curious and want more information beyond the initial google search page will look at the wikipedia pages.</p>
-                <p>Wikipedia edits: users need to be updated with related Wikipedia pages to edit the page's content.</p>
-                <p>Twitter: likes, comments, and posting makes information spread easily and enables large-scaled collaborative efforts.</p>
-            </div>
-        </div>
-
-        <!-- k-pop numbers -->
-        <div id='kpop-numbers' class='category section-5'>
-            <div class='container container-5'>
-                <h3>K-pop by the numbers</h3>
-                <p>Twitter BTS followers: 32.8M</p>
-                <p>Unique wikipedia editors on BTS page: ##</p>
-                <p>Number of searches for BTS: ##</p>
-                <p>Compare album releases between popular artists: Justin Bieber, Taylor Swift, and BTS</p>
-            </div>
-        </div>
-
         <!-- hashtag takeovers -->
-        <div id='hashtagtakeovers' class='category section-6'>
+        <div id='hashtagtakeovers' class='category section-3'>
+            <div class='container container-3'>
+                <h3>#HashtagTakeovers</h3> 
+                <img src='img/1_quote.png'> <br>
+                <p>Sarah Jiminez is one of many ARMYs that utilizes social media to not 
+                    only support their artists, but to collaborate with other fans around 
+                    the world. In the wake of the protests surrounding the George Floyd murder, 
+                    on June 3, 2020, K-pop fans collaborated and overtook white supremacist 
+                    hashtag “#WhiteLivesMatter” on Twitter, flooding it with fan recorded 
+                    videos and memes, making it a K-pop trending hashtag.</p> <br>
+                <img src='img/1_wlm.png' class='img-with-text'> <br>
+                <img src='img/1_wlmsample.png' class='img-with-text'> <br>
+            </div>
+        </div>
+
+        <!-- data -->
+        <div id='data' class='category section-4'>
+            <div class='container container-4'>
+                <h3>Our Data</h3>
+                <p></p>
+            </div>
+        </div>
+
+        <!-- methods & analysis -->
+        <div id='methods-analysis' class='category section-5'>
+            <div class='container container-5'>
+                <h3>Methods & Analysis</h3>
+                <p></p>
+            </div>
+        </div>
+
+        <!-- results -->
+        <div id='results' class='category section-6'>
             <div class='container container-6'>
-                <h3>Hashtag Takeovers</h3>
-                <p>Introduce #WhiteLivesMatter, #ImpeachBidenNow, #AOCLied, and other political hashtags</p>
-                <p>Go deeper into the #WhiteLivesMatter takeover</p>
+                <h3>Results</h3>
+                <p></p>
             </div>
         </div>
 
@@ -100,8 +85,7 @@
         <div id='conclusions' class='category section-7'>
             <div class='container container-7'>
                 <h3>Conclusions</h3>
-                <p>BTS fanbase is growing rapidly</p>
-                <p>twitter allows for more fan-related collaborative projects</p>
+                <p></p>
             </div>
         </div>
 
