data section done

--- a/index.html
+++ b/index.html
@@ -59,10 +59,41 @@
 
         <!-- data -->
         <div id='data' class='category section-4'>
+            <!-- intro -->
             <div class='container container-4'>
                 <h3>Our Data</h3>
-                <p></p>
+                <h5>Comparing Fan Activity during Album Release</h5>
+                
+                <p>We primarily explored the online presence and activity of BTS fans compared to that 
+                    of two popular Western artists, Taylor Swift and Justin Bieber. Over the years, both 
+                    Swift and Bieber have developed devoted fanbases, who identify themselves as Swifties 
+                    and Beliebers respectively. For the purposes of this analysis, we used BTS fans as a 
+                    proxy for K-pop fans in general as BTS ARMY are the largest subgroup of the K-pop community 
+                    at 50 million strong.</p><br>
+
+                <img src='img/2_artists.png' class='img-with-text'> <br>
+
+                <p>We specifically focused on the period prior to and following an album release due to 
+                    increased fan participation from new content. Fans can share their first impressions 
+                    of the new album and spread the word about new music, hoping to push their artist’s 
+                    music to popular record charts such as the Billboard Hot 100 Song. To account for technical 
+                    and social developments, such as the rise of Twitter’s popularity, we chose albums from each 
+                    artist that were released roughly around the same time. By comparing these three artists and 
+                    fan participation levels during three of their releases, we gain a more quantified 
+                    understanding of the social impact of musical fanbases online.
+                </p><br>
+
+                <h5>Our Data Sources</h5>
+            
+                <p>For a wider scope of fan activity and artist popularity, we explored three different 
+                    online platforms: Google Trends, Twitter, and Wikipedia. These data sources give us multiple 
+                    facets for collaboration to compare with varying levels of required commitment, 
+                    from easiest (Twitter likes) to hardest (Wikipedia revisions).</p> <br>
+
+                <img src='img/2_sources.png' class='img-with-text'> <br>
+
             </div>
+
         </div>
 
         <!-- methods & analysis -->
