--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         facets for collaboration to compare with varying levels of required commitment, 
                         from easiest (Twitter likes) to hardest (Wikipedia revisions).
                     </p> <br>
-                    
+
                     <img src='img/2_engagement.png' class='img-with-text'> <br>
 
                 </div>
@@ -126,7 +126,44 @@
 
                     <!-- google -->
                     <h5>Google Trends</h5>
-                    <p></p>
+                    <p>Google Trends analyzes the popularity of search queries inputted into Google’s search 
+                        engine over a given period of time for various locations and languages. The data is an 
+                        unbiased sample of Google search data that is anonymized, categorized, normalized, and 
+                        aggregated to the time and location of a query. Search data can be filtered by category, 
+                        such as “Arts and Entertainment” and “News”.
+                    </p><br>
+
+                    <p>Google Trends then computes and outputs a scaled popularity score on a range of 0 to 100, 
+                        with 100 being the maximum possible search interest, by comparing the volume of the term’s 
+                        searches to the overall volume of site searches for the set period and geography.
+                    </p><br>
+
+                    <p>Monthly Google Trends <strong>Arts and Entertainment</strong> search interest since 2004:</p>
+                    <img src='img/3_goo_popularity_all_cat.png' class='img-with-text'> <br>
+
+                    <p>Monthly Google Trends <strong>General</strong> search interest since 2004:</p>
+                    <img src='img/3_goo_popularity_all.png' class='img-with-text'> <br>
+
+
+                    <p>When plotting both our Arts and Entertainment and general search, we see 
+                        that BTS has had a steadier increase in interest compared to Swift or Bieber, 
+                        who became “overnight sensations” and had a large spike in interest during their 
+                        early career. On our Arts and Entertainment graph, it appears that Taylor Swift and 
+                        Justin Bieber are on a downtrend in popularity, with interest spikes during album 
+                        releases, after peaking in the early-mid 2000/2010s, with BTS overtaking Bieber in 
+                        popularity around August 2018. Currently, all three artists have approximately the 
+                        same level of Arts and Entertainment interest, with Swift having a slight lead 
+                        over BTS and Bieber at the bottom of the three.
+                    </p><br>
+
+                    <p>Our general search plot shows a lower general interest rate for Taylor Swift and an 
+                        increased interest in Justin Bieber and BTS. However, this plot shows a sharper 
+                        decline in popularity for Bieber and higher increase for BTS in comparison to the 
+                        Arts and Entertainment trends.  Despite 
+                        Swift and Bieber’s established popularity, newcomer BTS has been able to unseat both of 
+                        these popular Western artists in general search interest before the release of their 
+                        second album.
+                    </p><br>
                     
                     <!-- twitter -->
                     <h5>Twitter</h5>
